--- a/asset/css/custom/main.css
+++ b/asset/css/custom/main.css
@@ -1,10 +1,25 @@
 body{
     background-repeat: repeat-y;
-    background-color: black;
+    background-image: linear-gradient(180deg,#a70089 0%, #350b5d 100%); 
     background-position: 50%;
 }
+
+.hvr-pulse-grow {
+    vertical-align: baseline !important;
+}
+.login-a {
+    text-align: center;
+    color: #fff;
+    padding: 10px 20px 10px 20px;
+    cursor: pointer;
+    border-radius: 20px;
+    font-weight: lighter;
+    line-height: 1.1;
+    background: linear-gradient(to bottom, rgb(255, 104, 205) 0%, rgb(220, 16, 152) 100%);
+    box-shadow: 0px 0px 20px 0px rgb(211, 17, 146) !important;
+}
 .tab-content-detail{
-    background-color: #19191a ;
+    background-color: #1e003b ;
 }
 .silder-img{
 
@@ -13,7 +28,7 @@ body{
 }
 .nav-bg{
     background-color: transparent;
-    background-image: linear-gradient(180deg, #CD2FF2 0%, #ff2bfb 100%); 
+    background-image: linear-gradient(180deg,#a70089 0%, #350b5d 100%); 
 }
 .center{
     display: block;
@@ -27,7 +42,7 @@ body{
     font-size: 16px;
 }
 .bg-black{
-    background-color: black;
+    background-color: #1e003b;
 }
 .text-header{
     color: #ad02fc!important;
