--- a/asset/css/custom/main.css
+++ b/asset/css/custom/main.css
@@ -9,12 +9,12 @@ body{
 }
 .login-a {
     text-align: center;
+    font-weight: normal;
     color: #fff;
     padding: 10px 20px 10px 20px;
     cursor: pointer;
     border-radius: 20px;
     font-weight: lighter;
-    line-height: 1.1;
     background: linear-gradient(to bottom, rgb(255, 104, 205) 0%, rgb(220, 16, 152) 100%);
     box-shadow: 0px 0px 20px 0px rgb(211, 17, 146) !important;
 }
