--- a/asset/css/custom/main.css
+++ b/asset/css/custom/main.css
@@ -1,11 +1,37 @@
 body{
-    background-repeat: repeat-y;
-    background-image: linear-gradient(180deg,#a70089 0%, #350b5d 100%); 
-    background-position: 50%;
+    /* background-repeat: repeat-y; */
+    /* background-image: url("/asset/img/sexygame_bg.jpg"); */
+    /* background-image: linear-gradient(180deg,#a70089 0%, #350b5d 100%);  */
+    background-color: #0a0a0a;
+    background-position: 20%;
+    line-height: 1.4;
+    margin: 0 auto;
+    box-shadow:  0px 0px 30px 5px rgba(149,37,255,1);
 }
-
+.regis-a {
+    text-align: center;
+    color: #fff;
+    padding: 10px 20px 10px 20px;
+    cursor: pointer;
+    border-radius: 20px;
+    font-weight: lighter;
+    line-height: 1.1;
+    background: linear-gradient(to bottom, rgba(217,178,255,1) 0%, rgba(132,0,255,1) 100%);
+    box-shadow: 0px 0px 20px 0px rgba(149,37,255,1) !important;
+}
 .hvr-pulse-grow {
     vertical-align: baseline !important;
+}
+.line-a{
+    text-align: center;
+    font-weight: normal;
+    color: #fff;
+    padding: 10px 20px 10px 20px;
+    cursor: pointer;
+    border-radius: 20px;
+    font-weight: lighter;
+    background: linear-gradient(to bottom, #00c300, #008a00);
+    box-shadow: 0px 0px 20px 0px #00c300 !important;
 }
 .login-a {
     text-align: center;
@@ -28,7 +54,7 @@ body{
 }
 .nav-bg{
     background-color: transparent;
-    background-image: linear-gradient(180deg,#a70089 0%, #350b5d 100%); 
+background-image: linear-gradient(to bottom, #350b5d 0, #350b5d 100%); 
 }
 .center{
     display: block;
@@ -40,6 +66,11 @@ body{
     color: white !important;
     font-family: 'Prompt', sans-serif;
     font-size: 16px;
+}
+.text-onboard{
+    color: white !important;
+    font-family: 'Prompt', sans-serif;
+    font-size: 20px;
 }
 .bg-black{
     background-color: #1e003b;
