--- a/asset/css/custom/main.css
+++ b/asset/css/custom/main.css
@@ -1,13 +1,14 @@
 body{
-    /* background-repeat: repeat-y; */
+    background-repeat: repeat-y;
     /* background-image: url("/asset/img/sexygame_bg.jpg"); */
     /* background-image: linear-gradient(180deg,#a70089 0%, #350b5d 100%);  */
-    background-color: #0a0a0a;
+    background-color: #350b5d;
     background-position: 20%;
     line-height: 1.4;
     margin: 0 auto;
-    box-shadow:  0px 0px 30px 5px rgba(149,37,255,1);
+    box-shadow:  0px 0px 30px 5px #350b5d;
 }
+
 .regis-a {
     text-align: center;
     color: #fff;
